<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="32dp"
    android:layout_margin="8dp"
    android:background="@drawable/alert_dialog_background">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_word"
        android:textSize="28sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/editTextDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_word"
        android:autofillHints="no"
        android:inputType="text"
        android:textSize="20sp"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/alert_dialog_background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="32dp"
            android:padding="8dp"
            android:paddingEnd="16dp"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:paddingStart="16dp"
            android:backgroundTint="@color/buttons_color"
            android:text="@string/cancel"
            app:cornerRadius="10dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttons_color"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:cornerRadius="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonRandomWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/buttons_color"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/random_word"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:cornerRadius="10dp" />

</LinearLayout>