<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.GameActivity">

    <TextView
        android:id="@+id/textViewCurrentWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_background"
        android:padding="8dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Слово, слово" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewWords"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/editTextInputWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentWord"
        app:spanCount="3"
        tools:listitem="@layout/anagram_item"
        tools:itemCount="20"/>

    <EditText
        android:id="@+id/editTextInputWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="no"
        android:background="@drawable/circle_background"
        android:hint="@string/your_word"
        android:inputType="text"
        android:padding="8dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/buttonCheckAndAddWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewWords" />

    <Button
        android:id="@+id/buttonCheckAndAddWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/buttons_color"
        android:padding="8dp"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:text="@string/add_word"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/buttonHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInputWord" />

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/buttons_color"
        android:padding="8dp"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCheckAndAddWord" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:tint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>